<resources>
    <string name="app_name">My First Android App</string>
    <string name="action_settings">Settings (Coming Soon!)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="clicky_fragment_label">Clicky Fragment</string>
    <string name="link_collector_fragment_label">Link Collector Fragment</string>
    <string name="locator_fragment_label">Locator Fragment</string>
    <string name="web_service_fragment_label">Web Service Fragment</string>
    <string name="about_string">About</string>
    <string name="home_string">Home</string>
    <string name="locator_string">Locator</string>
    <string name="link_collector_string">Link Collector</string>
    <string name="clicky_string">Clicky</string>
    <string name="web_service_string">Web Service</string>

    <string name="hello_first_fragment">Home\n\n\nHello World!</string>
    <string name="hello_second_fragment">About\n\n\nHK\nhk@domain.com</string>
    <string name="latitude_longitude">Latitude, Longitude:</string>


    <!--  clicky button labels  -->
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
