<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="edu.neu.madcourse.numad20su_hassankhan.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ClickyFragment"
            app:destination="@id/ClickyFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_LinkCollectorFragment"
            app:destination="@id/LinkCollectorFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_LocatorFragment"
            app:destination="@id/LocatorFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="edu.neu.madcourse.numad20su_hassankhan.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ClickyFragment"
        android:name="edu.neu.madcourse.numad20su_hassankhan.ClickyFragment"
        android:label="@string/clicky_fragment_label"
        tools:layout="@layout/fragment_clicky"/>
    <fragment
        android:id="@+id/LinkCollectorFragment"
        android:name="edu.neu.madcourse.numad20su_hassankhan.LinkCollectorFragment"
        android:label="@string/link_collector_fragment_label"
        tools:layout="@layout/fragment_link_collector_list" />
    <fragment
        android:id="@+id/LocatorFragment"
        android:name="edu.neu.madcourse.numad20su_hassankhan.LocatorFragment"
        android:label="@string/locator_fragment_label"
        tools:layout="@layout/fragment_locator" />
</navigation>
